[gd_scene load_steps=8 format=3 uid="uid://cdvilbhcv4jgo"]

[ext_resource type="Script" uid="uid://crl3a1br5csbr" path="res://src/scripts/board_space.gd" id="1_u2sky"]
[ext_resource type="Theme" uid="uid://bk6ddf3xr8ux2" path="res://src/theme/Default.tres" id="3_iuj6y"]
[ext_resource type="Texture2D" path="res://Assets/Tiles/single.jpg" id="7_ma88c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2sky"]
bg_color = Color(0.542042, 0.513146, 0.458241, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing_size = 0.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wdaf"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iuj6y"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.962003, 0.332245, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgxls"]
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing_size = 0.3

[node name="BoardSpace" type="PanelContainer"]
custom_minimum_size = Vector2(70, 70)
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(35, 35)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_u2sky")
script = ExtResource("1_u2sky")

[node name="WhiteOutline" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wdaf")

[node name="GreenOutline" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iuj6y")

[node name="Tile" type="PanelContainer" parent="."]
visible = false
clip_children = 1
texture_filter = 5
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rgxls")

[node name="TileTexture" type="TextureRect" parent="Tile"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("7_ma88c")

[node name="Debug" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2

[node name="Filled" type="Label" parent="Debug/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Filled"

[node name="debug_fillLeft" type="Label" parent="Debug"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 34.0
offset_right = 69.0
offset_bottom = 45.0
grow_vertical = 2
rotation = -1.5708
theme = ExtResource("3_iuj6y")
theme_override_colors/font_color = Color(0.610597, 0.135888, 1, 1)
theme_override_font_sizes/font_size = 9
text = "fillLeft"
horizontal_alignment = 1

[node name="debug_fillTop" type="Label" parent="Debug"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 11.0
grow_horizontal = 2
theme = ExtResource("3_iuj6y")
theme_override_colors/font_color = Color(0.611765, 0.137255, 1, 1)
theme_override_font_sizes/font_size = 9
text = "fillTop"
horizontal_alignment = 1

[node name="debug_fillRight" type="Label" parent="Debug"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5708
theme = ExtResource("3_iuj6y")
theme_override_colors/font_color = Color(0.611765, 0.137255, 1, 1)
theme_override_font_sizes/font_size = 9
text = "fillRight"
horizontal_alignment = 1

[node name="debug_fillBot" type="Label" parent="Debug"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_iuj6y")
theme_override_colors/font_color = Color(0.611765, 0.137255, 1, 1)
theme_override_font_sizes/font_size = 9
text = "fillBot"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
